Title header fixed for light and dark mode

--- a/web/themes/custom/unl_five_news/css/theme/article.css
+++ b/web/themes/custom/unl_five_news/css/theme/article.css
@@ -301,10 +301,15 @@ blockquote p:nth-of-type(3)::after {
 
 .custom-oncampus-title {
   background-color: rgba(208, 0, 0, 95);
+  color: var(--btn-inverse-secondary) !important;
   width: auto;
   max-width: 100%;
   order: 2;
   padding: 3vh 5%;
+}
+
+.custom-oncampus-title h3 span{
+  color: var(--bg-btn-inverse-primary);
 }
 
 .custom-athelic-padding {
